# mr-piano

./: .gitignore  AUTHORS  LICENSE
AR Musicians/: .gitignore
AR Musicians/Assets/: CubeFall.cs  MainScene.unity  NoteCube.prefab  NoteCubeManager.cs  NoteEvent.cs  PlaneController.cs  SampleScene.unity
AR Musicians/Assets/Music/: song.json
AR Musicians/Assets/Oculus/: OculusProjectConfig.asset
AR Musicians/Assets/Prefabs/: ObjectToPlace.prefab  PianoHUD.prefab  VertexPrefab.prefab
AR Musicians/Assets/Resources/: OculusRuntimeSettings.asset
AR Musicians/Assets/Scripts/: DefinedPlane.cs  PerpendicularPlaneFinder.cs  PianoManager.cs  PlaneCorrectionNode.cs  PlaneDefiner.cs  PlaneFinder.cs  PlaneUser.cs  RayCastPlaneFinder.cs  UtilityMethods.cs
AR Musicians/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
AR Musicians/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
AR Musicians/Assets/scripts/: NoteCubeManager.cs  PlaneController.cs
AR Musicians/EmptySample_BackUpThisFolder_ButDontShipItWithYourGame/Managed/: UnityLinkerToEditorData.json  analytics.json  icallsummary.txt
AR Musicians/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
SynthesiaSet/: README.md  main.py  pyproject.toml
SynthesiaSet/configs/: keyboard_default.yaml  keyboard_max.yaml  keyboard_min.yaml
SynthesiaSet/src/: camera.py  config.py  key_group.py  piano.py  piano_types.py  piano_utils.py  scene.py  utils.py
SynthesiaSet/src/synthesiaset/: key_group.py  main.py  piano_config.py  piano_mesh.py  view_gt.py
(+684 files in other folders)
