[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthesiaset"
version = "0.0.1"
description = "Synthetic piano data set generator"
authors = [
    { name="Nicola Studer", email="nicola.studer2000@gmail.com" }
]
dependencies = [
    "numpy",
    "scikit-learn",
    "pyqt5",
    "trimesh",
    "drjit",
    "mitsuba>=3.0.0",
    "pyyaml",
    "manifold3d",
    "shapely",
    "matplotlib",
    "pyglet<2",
]